tests/NormalTests/paczka1/small_fuzzy/30798615.err
Error in line 3: gg4iHPIwq S122 49,3
Error in line 13: gg4iHPIwq S875 86,5
Error in line 9: vCwL6oHbNW S875 93,2
